fixed nav bar spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,20 +4,23 @@
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #7c7c7c;
 }
 
-header {
-    display: block;
-    background-color:#4b4b4b;
-    line-height: 65px;
-    font-size: 25px;
+nav {
+    display:flex;
+    align-items: baseline;
+    background-color: rgb(82, 82, 82);
+    height: 70px;
+    justify-content: space-between;
 }
 
-nav li {
-    display: inline;
+h1.navbar {
+    font-size: 40px;
 }
 
-.text-right {
-    text-align: right;
+nav ul li {
+    display:inline-block;
+    font-size: 30px; 
 }
